# xengine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile.am  NOTES.md  README.md  TODO.md  ]  assets.c  assets.h  cachegrind.out.772479  callgrind.out.54501  callgrind.out.9628  camera.c  cmptest.txt  comptest.txt  configure.ac  deleteme  ecs.h  format.sh  game_state.c  gamestate.c  gamestate.h  input.h  light.h  lin.c  lin.h  makefile  q  shader.c  suzanne.dae  systems.c  systems.h  test_cube.mesh  tests.sh  utils.h  vampire.mesh  vecallocator.h
Testing/: TAG
assetmgr/: CMakeLists.txt  asset_types.h  assetmgr-main.c  assetmgr.c  assetmgr.h  assetmgrd.c  assetmgrd_main.c
assetmgr/include/: assetmgr.h
assetmgr/src/: assetmgr-main.c  assetmgr.c
assetmgr/test/: CMakeLists.txt  assetmgr_tests.cpp  assetmgrd_tests.cpp
assets/: CMakeLists.txt  asset_types.h  assets.c  assets.h  vertex_alloc.c  vertex_alloc.h
assets/export/: operator_file_export.py
assets/geometries/: Cube_001-mesh.geom
assets/meshes/: Mesh_002-mesh.geom  Mesh_006-mesh.geom  cube.model  cyborg.model  pbr_test_sphere.geom  pbr_test_sphere.model  rain.model  suzanne.mesh
assets/meshes/female_base/: female_base.mtl
assets/meshes/female_base/test/: female_base_texture_test.mtl  skin_texture
assets/models/: cyborg.model.new  superheroine.model
assets/models/Superheroine_Basemesh_No_Hair/: Superheroine_Basemesh_No_Hair.model
assets/models/cube/: cube.dae  cube.model
assets/models/cyborg/: converter_test.model  cyborg.model
assets/shaders/: basic.frag  basic.vert  hellotriangle.frag  hellotriangle.vert  model.frag  model.vert
assets/test/: CMakeLists.txt  assets_tests.cpp  mesh_alloc_tests.cpp  vertex_alloc_tests.cpp
components/: CMakeLists.txt  component_table.hpp  intersection.hpp  process_join.hpp  table.hpp
components/test/: CMakeLists.txt  component_table_tests.cpp  intersection_tests.cpp  process_join_tests.cpp  table_tests.cpp
db/: CMakeLists.txt  game_state.c  game_state.h  id_list.h
db/test/: CMakeLists.txt
ecs/: CMakeLists.txt  archetype.h  archetypearray.h  component.h  componentarray.h  components.h  constants.h  coordinator.h  ecmap.h  ecs.c  ecs.h  ecs.hpp  entity.h  entityarray.h  map.h  tasks.cpp  tasks.h
ecs/test/: CMakeLists.txt  archetypearraytests.cpp  archetypetests.cpp  componentarraytests.cpp  componenttests.cpp  coordinatortests.cpp  ecs_tests.cpp  ecstests.cpp  entityarraytests.cpp  entitysystemtests.cpp
ecs2/: CMakeLists.txt  archetype.cpp  archetype.h  archetype.hpp  chunk.hpp  component_array.cpp  component_array.h  ecs.cpp  ecs.h  ecs.hpp  entity_mgr.cpp  entity_mgr.h  entity_mgr.hpp  system.h  type_registry.hpp  types.hpp
ecs2/test/: CMakeLists.txt  archetype_tests.cpp  chunk_tests.cpp  component_array_tests.cpp  ecs_tests.cpp  entity_mgr_tests.cpp  system_tests.cpp
engine/: CMakeLists.txt  engine.cpp  run.cpp
example/: CMakeLists.txt  main.cpp
game/: CMakeLists.txt  database.c  database.h  main.c  main.cpp
glsl/: deferred_light.frag  model.vert  pbrd_geom.frag  pbrd_geom.geom  pbrd_geom.tesc  pbrd_geom.tese  pbrd_geom.vert  pbrd_light.frag  pbrd_light.vert  text.frag  text.vert  uber.vert
include/threadpool/: CMakeLists.txt  i_task.h  task.h  threadpool.h
input/: CMakeLists.txt  input.c  input.cpp  input.h
lib/glad/: CMakeLists.txt  Makefile.am  configure.ac  glad.h
lib/glad/include/: glad.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt  Makefile.am  configure.ac  stb_image.h
lin/: CMakeLists.txt  lin.c  lin.h  mat4.h  vec2.h  vec3.h  vec4.h
lin/test/: CMakeLists.txt  lintests.cpp  mat4tests.cpp  vec2tests.cpp
man/: ecs
memory/: CMakeLists.txt  alloc.h  allocator.h  database.c  database.h  heap.cpp  heap.h  mallocator.cpp  mallocator.h  memorypool.h
memory/test/: CMakeLists.txt  databasetests.cpp
platform/: CMakeLists.txt  platform.h
render/: CMakeLists.txt  camera.c  camera.h  checkerr.c  checkerr.cpp  checkerr.h  deferred_render.c  deferred_render.h  light.h  mainwindow.h  render.c  render.h  shader.c  shader.cpp  shader.h  text.c  text.h  window.c  window.cpp  window.h
render/glsl/: deferred_geom.frag  deferred_geom.vert  deferred_light.frag  deferred_light.vert  model.frag  text.frag  text.vert  uber.frag  uber.vert
resource/: CMakeLists.txt  collada.c  collada.h  import.cpp  import.h  importer.cpp  importer.h  logallocator.h  material.h  mesh.c  mesh.cpp  mesh.h  mmapfile.c  mmapfile.cpp  mmapfile.h  model.h  resource.h  texture.cpp  texture.h  vertex.h
resource/test/: CMakeLists.txt  colladatests.cpp  importertests.cpp  importtests.cpp  logallocatortests.cpp  meshtests.cpp  mmapfiletests.cpp  resourcetests.cpp
tables/: CMakeLists.txt  table.hpp
tables/test/: CMakeLists.txt  tables_tests.cpp
test/: CMakeLists.txt  alloc_tests.cpp  allocatortests.cpp  asset_tests.c  blockallocatortests.cpp  buffer_tests.c  circular_buffer_tests.cpp  componentarray_tests.cpp  componentarraytests.cpp  coordinatortests.cpp  database_tests.c  ecmaptests.cpp  ecs_tests.c  entitysubsystem_tests.cpp  entitysystemtests.cpp  gamestate_tests.c  id_list_tests.cpp  importertests.cpp  lin_tests.c  maptests.cpp  mat4tests.cpp  mem_tests.c  mesh_loading_perf.c  meshtests.cpp  mmapfiletests.cpp  placeholdertest.cpp  poolallocatortests.cpp  resourcetests.cpp  runtests.sh  shaders_tests.cpp  test_game.c  test_tests.c  threadpooltests.cpp  vec2tests.cpp  vec3tests.cpp  vec4tests.cpp  vec_tests.cpp
test/asset_tests/: asset_type.c
test/gamestate_tests/: create_mask.c  gamestate_tests.c
test/lin_tests/: lin_tests.c
threadpool/: CMakeLists.txt  asyncresult.h  task.h  threadpool.cpp  threadpool.h
threadpool/test/: CMakeLists.txt  perf.cpp  profile.cpp  threadpooltests.cpp
tools/: CMakeLists.txt  collada.c  collada.cpp  converter.c  geom_converter.c  rig.c  test_game.c  tex_converter.c
types/: CMakeLists.txt  material.h  mesh.h  texture.h
utils/: CMakeLists.txt  utils.c  utils.h  xmlparser.c  xmlparser.h
utils/test/: CMakeLists.txt  xmlparsertests.cpp
xengine/: CMakeLists.txt  run.cpp
(+136 files in other folders)
