cmake_minimum_required(VERSION 3.16)
project(xenginetests VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE debug)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

link_libraries(xengine GTest::gtest_main)

add_executable(poolallocatortests poolallocatortests.cpp)
add_executable(allocatortests allocatortests.cpp)
add_executable(importertests importertests.cpp)
add_executable(resourcetests resourcetests.cpp)
add_executable(threadpooltests threadpooltests.cpp)
add_executable(entitysystemtests entitysystemtests.cpp)
add_executable(componentarraytests componentarraytests.cpp)
add_executable(vec3tests vec3tests.cpp)
add_executable(vec4tests vec4tests.cpp)
add_executable(mat4tests mat4tests.cpp)

include(GoogleTest)
gtest_discover_tests(poolallocatortests)
gtest_discover_tests(allocatortests)
gtest_discover_tests(importertests)
gtest_discover_tests(resourcetests)
gtest_discover_tests(threadpooltests)
gtest_discover_tests(entitysystemtests)
gtest_discover_tests(componentarraytests)
gtest_discover_tests(vec3tests)
gtest_discover_tests(vec4tests)
gtest_discover_tests(mat4tests)
